manifests/argo/netpol-talos-extension-bump.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: talos-extension-bump-sensor
  namespace: argo
spec:
  endpointSelector:
    matchLabels:
      sensor-name: talos-extension-bump
  ingressDeny:
    - fromEntities:
        - world
  egress:
    - toEndpoints:
        - matchLabels:
            eventbus-name: default
      toPorts:
        - ports:
            - port: "4222"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
